added final approved prospectus

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -5,9 +5,9 @@
 .main-text
     img(src='transparent.png')
     :markdown-it(html=true)
-        The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  towards  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.  
+        The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.  
 
-        We're seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.  
+        ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.  
 
 h1#Event-header Weekly Events 
 
@@ -19,8 +19,8 @@ h1#Event-header Weekly Events
                 <span style="color:#c6ecd6">40+ Students, 1 Hour</span>
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">We host a general meeting or workshop every two weeks covering some interesting security topic.  
-                In previous semesters, we've covered topics such as ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span>
+                <span style = "text-align: justify">ISSS hosts a general meeting or workshop every two weeks focusing on interesting security topics.  
+                Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span>
     .container1
         .col1
             :markdown-it(html=true)
@@ -28,7 +28,7 @@ h1#Event-header Weekly Events
                 <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. We write, host, and cater CTF challenges every two weeks.</span>
+                <span style = "text-align: justify">Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. ISSS writes, hosts, and caters CTF challenges every two weeks.</span>
 h1#Event-header Special Events
 .container2
     .container1
@@ -46,16 +46,17 @@ h1#Event-header Special Events
                 <span style="color:#c6ecd6">300+ Students, 3+ Hours</span>
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span>
+                <span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on October 27-28 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span>
     
     .container1
         .col1
             :markdown-it(html=true)
                 ### Security Day
-                <span style="color:#c6ecd6">130+ Students, 8 Hours</span>
+                <span style="color:#c6ecd6">130+ Students, 8 Hours</span>  
+                
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.</span>
+                <span style = "text-align: justify">Security Day is a day-long cybsersecurity focused student event hosted during the spring semester in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.</span>
 
 h1#Sponsor-header Sponsorship Levels
 .Table
@@ -134,7 +135,7 @@ h1#Sponsor-header Sponsorship Levels
         ### For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
 .Terms
     :markdown-it(html=true)
-        *Terms and Conditions.* Sponsorship benefits last until the end of the Spring semester of the academic school year. Benefits may be temporarily suspended, due to lack of available funds, for sponsors that have not yet completed the expensing process and confirmed payment with the Department of Computer Science. General meetings and technical talks hosted by sponsors are expected to be educational, respectful of students’ time, and not primarily for the purposes of recruiting. Sponsorship levels, benefits, and prices are subject to change every academic year.
+        *Please Note:* Sponsorship runs on the academic year cycle from the beginning of fall semester through the end of spring semester. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices are subject to change every academic year.
  
 h1#FAQ FAQ
 
