Change tier prices

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -81,7 +81,7 @@ h1#Sponsor-header Sponsorship Levels
                 center
                     :markdown-it(html=true)
                         ## <span style="color:#D4AF37">Gold</span>  
-                        <span style="color:#D4AF37">$2,000</span>
+                        <span style="color:#D4AF37">$3,000</span>
             td 
                 left
                     :markdown-it(html=true)
@@ -97,13 +97,13 @@ h1#Sponsor-header Sponsorship Levels
                 center 
                     :markdown-it(html=true)
                         ## <span style="color:#BCC6CC">Silver</span>  
-                        <span style="color:#BCC6CC">$1,000</span>
+                        <span style="color:#BCC6CC">$1,500</span>
             td 
                 left
                     :markdown-it(html=true)
                         * Host a catered General Meeting (technical talk) OR Workshop
                         
-                        * Invitation to Networking Dinner (up to 2 representatives)
+                        * Invitation to Fall Networking Dinner (up to 2 representatives)
                         * Provide a company presence during Security Day
                         * Recognition on ISSS T-Shirts and Security Day marketing materials
                         * Have Access to mini CTF Resume/Solves data
@@ -117,7 +117,7 @@ h1#Sponsor-header Sponsorship Levels
                 center
                     :markdown-it(html=true)
                         ## <span style="color:#B26F19">Bronze</span>  
-                        <span style="color:#B26F19">$500</span>
+                        <span style="color:#B26F19">$750</span>
             td 
                 left
                     :markdown-it(html=true)
