--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -115,6 +115,12 @@ td {
 #FAQ{
     page-break-before: always;
 }
+.Footnote {
+	padding-top: 1cm;
+    text-align: left;
+    padding-left: 2cm;
+    padding-right: 1.75cm;
+}
 .Info{
     padding-top: 1cm;
     text-align: center;
