--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -34,7 +34,7 @@ h1#Event-header Special Events
     .container1
         .col1
             :markdown-it(html=true)
-                ### Fall Networking Dinner*
+                <h3>Fall Networking Dinner<span style="font-size:12">*</span></h3>
                 <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
@@ -42,7 +42,7 @@ h1#Event-header Special Events
     .container1
         .col1
             :markdown-it(html=true)
-                ### ISSSCTF†
+                <h3>ISSSCTF<span style="font-size:10">†</span></h3>
                 <span style="color:#c6ecd6">300+ Students, 3+ Hours</span>
         .col2
             :markdown-it(html=true)
@@ -51,7 +51,7 @@ h1#Event-header Special Events
     .container1
         .col1
             :markdown-it(html=true)
-                ### Security Day†
+                <h3>Security Day<span style="font-size:10">†</span></h3>
                 <span style="color:#c6ecd6">130+ Students, 8 Hours</span>  
                 
         .col2
@@ -86,7 +86,7 @@ h1#Sponsor-header Sponsorship Levels
                 left
                     :markdown-it(html=true)
                         * Host a CTF Competition OR a Custom Event
-                        * Invitation to Networking Dinner (up to 4 representatives)*
+                        * Invitation to Networking Dinner (up to 4 representatives)<span style="font-size:12">*</span>
                         * All benefits of the Silver level
             td
                 center
@@ -103,8 +103,8 @@ h1#Sponsor-header Sponsorship Levels
                     :markdown-it(html=true)
                         * Host a catered General Meeting (technical talk) OR Workshop
                         
-                        * Invitation to Fall Networking Dinner (up to 2 representatives)*
-                        * Provide a company presence during Security Day†
+                        * Invitation to Fall Networking Dinner (up to 2 representatives)<span style="font-size:12">*</span>
+                        * Provide a company presence during Security Day<span style="font-size:10">†</span>
                         * Recognition on ISSS T-Shirts and Security Day marketing materials
                         * Have Access to mini CTF Resume/Solves data
                         * All benefits of the Bronze level
@@ -132,20 +132,18 @@ h1#Sponsor-header Sponsorship Levels
 
 .Footnote
     :markdown-it(html=true)
-        \* Fall semester only
+        \*   Fall semester only
         <br />
-        † Spring semester only
+        †   Spring semester only
 
 .Info
     :markdown-it(html=true)
         ### For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
 .Terms
     :markdown-it(html=true)
-        *Please Note:* Sponsorship runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin over the Winter
-        (consisting of the following Spring and Fall semesters) or over the Summer (consisting of the following Fall and Spring semesters). 
-        ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are
-         expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices 
-         are subject to change every academic year.
+        *Please Note:* Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
+        either the fall or spring semester, and will encompass that current semester and the one proceeding it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors areexpected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices 
+        are subject to change every academic year.
  
 h1#FAQ FAQ
 
