Add fixes from Lainey

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -1,6 +1,6 @@
 .headers
     h1#header Information & Systems Security Society
-    h2 2018-2019 Sponsorship Guide
+    h2 2019-2020 Sponsorship Guide
  
 .main-text
     img(src='transparent.png')
@@ -42,11 +42,11 @@ h1#Event-header Special Events
     .container1
         .col1
             :markdown-it(html=true)
-                <h3>ISSSCTF<span style="font-size:10">†</span></h3>
+                <h3>ISSSCTF<span style="font-size:12">*</span></h3>
                 <span style="color:#c6ecd6">300+ Students, 3+ Hours</span>
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on October 20-21 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span>
+                <span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on November 2-3 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span>
     
     .container1
         .col1
@@ -139,10 +139,13 @@ h1#Sponsor-header Sponsorship Levels
 .Info
     :markdown-it(html=true)
         ### For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
+.FOCS
+    :markdown-it(html=true)
+    <span style="font-size=6">FoCS: Non-sponsor Friends of Computer Science members are invited to host a [general meeting/tech talk (with dinner)/social corporate dinner] based on availability, ancillary catering costs not included.</span>
 .Terms
     :markdown-it(html=true)
         *Please Note:* Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
-        either the fall or spring semester, and will encompass that current semester and the one proceeding it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors areexpected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices 
+        either the fall or spring semester, and will encompass that current semester and the one following it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices 
         are subject to change every academic year.
  
 h1#FAQ FAQ
