--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -115,20 +115,28 @@ td {
 #FAQ{
     page-break-before: always;
 }
-.Footnote {
+.FOCS {
+	font-size: 10;
+	padding-left: 1.5cm;
+	padding-right: 1.5cm;
+	text-align: center;
 	padding-top: 1cm;
+	padding-bottom: -1cm;
+}
+.Footnote {
+	padding-top: 0.5cm;
     text-align: left;
     padding-left: 2cm;
     padding-right: 1.75cm;
 }
 .Info{
-    padding-top: 1cm;
+    padding-top: 0.5cm;
     text-align: center;
     padding-left: 2cm;
     padding-right: 1.75cm;
 }
 .Terms{
-    padding-top: 1cm;
+    padding-top: 0.5cm;
     padding-left:1.5cm;
     padding-right:1.5cm;
     page-break-after: always;
