--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -141,7 +141,7 @@ h1#Sponsor-header Sponsorship Levels
         ### For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
 .FOCS
     :markdown-it(html=true)
-    <span style="font-size=6">FoCS: Non-sponsor Friends of Computer Science members are invited to host a [general meeting/tech talk (with dinner)/social corporate dinner] based on availability, ancillary catering costs not included.</span>
+    <span style="font-size=9">FoCS: Non-sponsor Friends of Computer Science members are invited to host a tech talk (with dinner) based on availability, ancillary catering costs not included.</span>
 .Terms
     :markdown-it(html=true)
         *Please Note:* Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
