--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -8,7 +8,7 @@
         The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.  
 
         ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.  
-
+<img style="display: block;margin-left: auto;margin-right: auto;" height="36" src='logo.png'/>
 h1#Event-header Weekly Events 
 
 .container2
