Make CS dept. logo EVEN bigger

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -1,7 +1,6 @@
 .headers
-    <img style="height: 50px;margin-top: 50px;margin-right: 25px; position: absolute;right:0px;" src="logo.png"/>
-    h1#header Information & Systems Security Society 
-    h2 2019-2020 Sponsorship Guide
+    img(src='logo.png', height=40, marginTop=10)
+    h2 Information & Systems<br />Security Society 2019-2020 Sponsorship Guide
  
 .main-text
     img(src='transparent.png')
