--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -29,20 +29,30 @@ body {
 }
 
 .headers{
-	padding-left:1.75cm;
+	font-size: 20;
+	padding-left:1cm;
 	margin-bottom: .25cm;
+	img {
+		float: right;
+		height: 50px;
+		margin-left: 30px;
+		margin-right: 70px;
+		margin-top: 30px;
+		margin-bottom: 20px;
+	}
 }
 .main-text{
+	margin-top: 40px;
 	img{
 		float: right;
 		margin: 0px 0px 0px 0px;
-		max-height: 225px;
-		max-width: 225px;
+		max-height: 200px;
+		max-width: 200px;
 	}
 	margin-right: 1cm;
 	p{
 		margin-top:20px;
-		margin-left: 1.8cm;
+		margin-left: 1cm;
 	}
 }
 #Sponsor-header{
