--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -1,6 +1,6 @@
 .headers
     img(src='logo.png', height=40, marginTop=10)
-    h2 Information & Systems<br />Security Society 2019-2020 Sponsorship Guide
+    h2 Information & Systems<br />Security Society 2020-2021 Sponsorship Guide
  
 .main-text
     img(src='transparent.png')
@@ -144,8 +144,7 @@ h1#Sponsor-header Sponsorship Levels
 .Terms
     :markdown-it(html=true)
         *Please Note:* Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
-        either the fall or spring semester, and will encompass that current semester and the one following it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices 
-        are subject to change every academic year.
+        either the fall or spring semester, and will encompass that current semester and the one following it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Semester-long sponsorship options are also available upon request. 
  
 h1#FAQ FAQ
 
