update for 2021-2022 school year

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -1,11 +1,11 @@
 .headers
-    img(src='logo.png', height=40, marginTop=10)
-    h2 Information & Systems<br />Security Society 2020-2021 Sponsorship Guide
+    img(src='dept.png', height=40, marginTop=10)
+    h2 Information & Systems<br />Security Society 2021-2022 Sponsorship Guide
  
 .main-text
-    img(src='transparent.png')
+    img(src='isss-logo-white.png')
     :markdown-it(html=true)
-        The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.  
+        The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events and mentorship program, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.  
 
         ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.  
 h1#Event-header Weekly Events 
@@ -18,7 +18,7 @@ h1#Event-header Weekly Events
                 <span style="color:#c6ecd6">40+ Students, 1 Hour</span>
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">ISSS hosts a general meeting or workshop every two weeks focusing on interesting security topics.  
+                <span style = "text-align: justify">ISSS hosts a general meeting or workshop every week focusing on interesting security topics.  
                 Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span>
     .container1
         .col1
@@ -41,11 +41,11 @@ h1#Event-header Special Events
     .container1
         .col1
             :markdown-it(html=true)
-                <h3>ISSSCTF<span style="font-size:12">*</span></h3>
-                <span style="color:#c6ecd6">300+ Students, 3+ Hours</span>
+                <h3>UTCTF<span style="font-size:12">†</span></h3>
+                <span style="color:#c6ecd6">8,000+ Participants, 3 Days</span>
         .col2
             :markdown-it(html=true)
-                <span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on November 2-3 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span>
+                <span style = "text-align: justify">UTCTF is an annual CTF hosted by ISSS. The event takes place during the Spring semester and is attended by several thousand participants from around the world.</span>
     
     .container1
         .col1
@@ -84,7 +84,7 @@ h1#Sponsor-header Sponsorship Levels
             td 
                 left
                     :markdown-it(html=true)
-                        * Host a CTF Competition OR a Custom Event
+                        * Host a CTF Competition or Custom Event
                         * Invitation to Networking Dinner (up to 4 representatives)<span style="font-size:12">*</span>
                         * All benefits of the Silver level
             td
